# fractal-paper-2026

./: .copier-answers.yml  .gitattributes  .gitignore  .pre-commit-config.yaml  .prettierignore  README.md  SECURITY.md  pixi.toml  pyproject.toml
.devcontainer/: devcontainer.json
.github/: CODEOWNERS
.github/workflows/: build.yml  ci.yml  scorecard.yml
fractal_paper_2026/: add_condition_tables.py  add_registration_condition_table.py  fix_channel_names.ipynb  fix_channel_names.py  plate_qc.ipynb
fractal_paper_2026/cardiac_diff_analysis/: add_condition_tables.py  plate_qc.ipynb
fractal_paper_2026/drp_analysis/: Fig_DRP.md  Fig_DRP.qmd  benchmark_comparison_drug_profiling.ipynb
fractal_paper_2026/drp_analysis/dataset/: drug_logAUC.csv  viability_measurement.csv  viability_prediction.csv
fractal_paper_2026/multiplex3d_abbott/: fig4c_zfish_grid_multiplexing.ipynb  fig4d_zfish_segmentation.ipynb  fig4ef_umap_clustering.ipynb  utils.py
fractal_paper_2026/workflows/: cardiac_diff_workflow.json  drp_workflow.json  workflow-temp_3d_multiplexed_abbott.json
fractal_paper_2026/workflows/cardiac_diff_extra_files/classifiers/: NKX25_classifier.clf  NKX25_classifier_v1.clf  Sox17_classifier.clf  TroponinT_classifier.clf  TroponinT_classifier_v1.clf  nanog_classifier.clf  segmentation_qc_classifier.clf
fractal_paper_2026/workflows/cardiac_diff_extra_files/registration_params/: setting_search_14.txt
fractal_paper_2026/workflows/drp_extra_files/: Assaylayout-CyQ-H-SytoxR.csv  BVC-test-data-CyQ-classifier
tests/: test_core.py
