[build-system]
requires = ["setuptools", "setuptools-scm", "wheel"]

[tool.setuptools_scm]
version_scheme = "post-release"

[project]
name = "fractal-paper-2026"
description = "Fractal paper supplementary code"
authors = [{ name = "Joel Luethi", email = "joel.luethi@uzh.ch" }]
dynamic = ["version"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]
requires-python = ">=3.11, <3.14"
readme = "README.md"
dependencies = [
  "ngio ==0.4.6",
  "ipykernel",
  "umap-learn",
  "scikit-learn",
  "matplotlib",
  "seaborn",
  "pandas",
  "numpy",
  "scipy",
  "tqdm",
  "ipywidgets",
]

[project.urls]
repository = "https://github.com/jluethi/fractal-paper-2026"

[tool.setuptools.packages.find]
include = ["fractal_paper_2026"]

[project.scripts]

[tool.ruff]
line-length = 88

[tool.ruff.lint]
ignore = [
  "N803", # https://docs.astral.sh/ruff/rules/invalid-argument-name
  "N806", # https://docs.astral.sh/ruff/rules/non-lowercase-variable-in-function
  "E501", # https://docs.astral.sh/ruff/faq/#is-the-ruff-linter-compatible-with-black
]
select = [
  # pyflakes
  "F",
  # pycodestyle
  "E",
  "W",
  # isort
  "I",
  # pep8-naming
  "N",
  # pyupgrade
  "UP",
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

# If you run into `missing library stubs or py.typed marker` errors
# and no stubs are available for this library, you can add an override
# to ignore the missing imports.
# [[tool.mypy.overrides]]
# module = ["my_module"]
# ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.pixi.workspace]
name = "fractal-paper-2026"
channels = ["conda-forge"]
platforms = ["osx-arm64", "osx-64", "linux-64", "win-64"]

[tool.pixi.dependencies]
python = ">=3.11, <3.14"
pip = "*"
setuptools = ">=61"
setuptools-scm = "*"

[tool.pixi.tasks]
postinstall = "pip install --no-build-isolation --no-deps --disable-pip-version-check -e ."

[tool.pixi.feature.test.dependencies]
pytest = ">=6"
pytest-cov = "*"

[tool.pixi.feature.test.tasks]
test = "pytest"
test-coverage = "pytest --cov=fractal_paper_2026 --cov-report=xml --cov-report=term-missing"

[tool.pixi.feature.build.dependencies]
python-build = "*"
twine = "*"
wheel = "*"

[tool.pixi.feature.build.tasks]
build-wheel = "python -m build --no-isolation ."
check-wheel = "twine check dist/*"

[tool.pixi.feature.lint.dependencies]
pre-commit = "*"
insert-license-header = "*"
docformatter = "*"
ruff = "*"
prettier = "*"
taplo = "*"

[tool.pixi.feature.lint.tasks]
pre-commit-install = "pre-commit install"
pre-commit-run = "pre-commit run -a"

[tool.pixi.feature.py311.dependencies]
python = "3.11.*"

[tool.pixi.feature.py312.dependencies]
python = "3.12.*"

[tool.pixi.feature.py313.dependencies]
python = "3.13.*"

[tool.pixi.feature.r.dependencies]
r-base = ">=4.3"
quarto = ">=1.4"
r-knitr = "*"
r-rmarkdown = "*"
r-here = "*"
r-readr = "*"
r-ggplot2 = "*"
r-ggpubr = "*"
r-scales = "*"
r-forcats = "*"

[tool.pixi.feature.r.tasks]
render-drp = { cmd = "quarto render fractal_paper_2026/drp_analysis/Fig_DRP.qmd", description = "Render the Drug Response Profiling figure" }

[tool.pixi.environments]
default = ["test"]
py311 = ["py311", "test"]
py312 = ["py312", "test"]
py313 = ["py313", "test"]
build = ["build"]
lint = { features = ["lint"], no-default-feature = true }
drp-analysis = { features = ["r"], no-default-feature = true }

[tool.pixi.pypi-dependencies]
fractal-paper-2026 = { path = ".", editable = true }
